cigna-gitops/apps/dev/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: cigna-nginx-active
  namespace: dev
spec:
  selector:
    app: cigna-nginx
  ports:
  - port: 80
    targetPort: 80
